compiler/pyParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .pyListener import pyListener
else:
    from pyListener import pyListener


class pyParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'pass'", u"'del'", u"'print'", 
                     u"'>>'", u"'assert'", u"','", u"'raise'", u"'break'", 
                     u"'continue'", u"'return'", u"'yield'", u"'global'", 
                     u"'exec'", u"'in'", u"'import'", u"'from'", u"'*'", 
                     u"'as'", u"'.'", u"'@'", u"'('", u"')'", u"'while'", 
                     u"'for'", u"'with'", u"'if'", u"'elif'", u"'else'", 
                     u"':'", u"'class'", u"'try'", u"'finally'", u"'except'", 
                     u"'='", u"'+='", u"'-='", u"'*='", u"'/='", u"'//='", 
                     u"'%='", u"'**='", u"'>>='", u"'<<='", u"'&='", u"'^='", 
                     u"'|='", u"'['", u"']'", u"'+'", u"'-'", u"'~'", u"'**'", 
                     u"'%'", u"'//'", u"'/'", u"'<<'", u"'&'", u"'^'", u"'|'", 
                     u"'not'", u"'and'", u"'or'", u"'lambda'", u"'{'", u"'}'", 
                     u"'is'", u"'<'", u"'<='", u"'>'", u"'>='", u"'<>'", 
                     u"'!='", u"'=='", u"'def'", u"'r'", u"'u'", u"'ur'", 
                     u"'R'", u"'U'", u"'UR'", u"'Ur'", u"'uR'", u"'b'", 
                     u"'B'", u"'br'", u"'Br'", u"'bR'", u"'BR'", u"':$blockbegin'", 
                     u"'$blockend'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"BlockBegin", u"BlockEnd", 
                      u"Keyword", u"Operator", u"Var", u"Int", u"Float", 
                      u"Comment", u"Space", u"Str" ]

    RULE_start = 0
    RULE_prog = 1
    RULE_stmt = 2
    RULE_single_stmt = 3
    RULE_stmts = 4
    RULE_import_ = 5
    RULE_id_list = 6
    RULE_id_alias = 7
    RULE_mod_list = 8
    RULE_mod_alias = 9
    RULE_module = 10
    RULE_rel_module = 11
    RULE_id_dot = 12
    RULE_block_stmt = 13
    RULE_block_head = 14
    RULE_decorator = 15
    RULE_loop = 16
    RULE_while_ = 17
    RULE_for_ = 18
    RULE_with_ = 19
    RULE_alias_list = 20
    RULE_alias = 21
    RULE_ifelse = 22
    RULE_if_ = 23
    RULE_elif_ = 24
    RULE_else_ = 25
    RULE_block = 26
    RULE_class_ = 27
    RULE_trycatch = 28
    RULE_except_ = 29
    RULE_assign = 30
    RULE_assign_stmt = 31
    RULE_aug_assign = 32
    RULE_aug_op = 33
    RULE_varlist = 34
    RULE_vartuple = 35
    RULE_exprlist = 36
    RULE_expr = 37
    RULE_lambda_ = 38
    RULE_generator = 39
    RULE_list_gen = 40
    RULE_iter_gen = 41
    RULE_set_gen = 42
    RULE_dict_gen = 43
    RULE_gen_expr = 44
    RULE_val = 45
    RULE_op_cmp = 46
    RULE_slice_ = 47
    RULE_list_ = 48
    RULE_tuple_ = 49
    RULE_set_ = 50
    RULE_dict_ = 51
    RULE_dictlist = 52
    RULE_dictitem = 53
    RULE_func = 54
    RULE_paramlist = 55
    RULE_pos_paramlist = 56
    RULE_pos_paramtuple = 57
    RULE_kparamlist = 58
    RULE_kparam = 59
    RULE_arglist = 60
    RULE_pos_arglist = 61
    RULE_pos_arg = 62
    RULE_karglist = 63
    RULE_karg = 64
    RULE_var = 65
    RULE_simple_var = 66
    RULE_id_ = 67
    RULE_number = 68
    RULE_int_ = 69
    RULE_float_ = 70
    RULE_string = 71
    RULE_str_prefix = 72
    RULE_str_val = 73
    RULE_blockbegin = 74
    RULE_blockend = 75

    ruleNames =  [ u"start", u"prog", u"stmt", u"single_stmt", u"stmts", 
                   u"import_", u"id_list", u"id_alias", u"mod_list", u"mod_alias", 
                   u"module", u"rel_module", u"id_dot", u"block_stmt", u"block_head", 
                   u"decorator", u"loop", u"while_", u"for_", u"with_", 
                   u"alias_list", u"alias", u"ifelse", u"if_", u"elif_", 
                   u"else_", u"block", u"class_", u"trycatch", u"except_", 
                   u"assign", u"assign_stmt", u"aug_assign", u"aug_op", 
                   u"varlist", u"vartuple", u"exprlist", u"expr", u"lambda_", 
                   u"generator", u"list_gen", u"iter_gen", u"set_gen", u"dict_gen", 
                   u"gen_expr", u"val", u"op_cmp", u"slice_", u"list_", 
                   u"tuple_", u"set_", u"dict_", u"dictlist", u"dictitem", 
                   u"func", u"paramlist", u"pos_paramlist", u"pos_paramtuple", 
                   u"kparamlist", u"kparam", u"arglist", u"pos_arglist", 
                   u"pos_arg", u"karglist", u"karg", u"var", u"simple_var", 
                   u"id_", u"number", u"int_", u"float_", u"string", u"str_prefix", 
                   u"str_val", u"blockbegin", u"blockend" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    BlockBegin=90
    BlockEnd=91
    Keyword=92
    Operator=93
    Var=94
    Int=95
    Float=96
    Comment=97
    Space=98
    Str=99

    def __init__(self, input):
        super(pyParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def prog(self):
            return self.getTypedRuleContext(pyParser.ProgContext,0)


        def EOF(self):
            return self.getToken(pyParser.EOF, 0)

        def getRuleIndex(self):
            return pyParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitStart(self)




    def start(self):

        localctx = pyParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.prog()
            self.state = 153
            self.match(pyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.StmtContext)
            else:
                return self.getTypedRuleContext(pyParser.StmtContext,i)


        def getRuleIndex(self):
            return pyParser.RULE_prog

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterProg(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitProg(self)




    def prog(self):

        localctx = pyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.stmt()
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pyParser.T__1) | (1 << pyParser.T__2) | (1 << pyParser.T__3) | (1 << pyParser.T__5) | (1 << pyParser.T__7) | (1 << pyParser.T__8) | (1 << pyParser.T__9) | (1 << pyParser.T__10) | (1 << pyParser.T__11) | (1 << pyParser.T__12) | (1 << pyParser.T__13) | (1 << pyParser.T__15) | (1 << pyParser.T__16) | (1 << pyParser.T__20) | (1 << pyParser.T__21) | (1 << pyParser.T__23) | (1 << pyParser.T__24) | (1 << pyParser.T__25) | (1 << pyParser.T__26) | (1 << pyParser.T__30) | (1 << pyParser.T__31) | (1 << pyParser.T__47) | (1 << pyParser.T__49) | (1 << pyParser.T__50) | (1 << pyParser.T__51) | (1 << pyParser.T__60))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (pyParser.T__63 - 64)) | (1 << (pyParser.T__64 - 64)) | (1 << (pyParser.T__74 - 64)) | (1 << (pyParser.T__75 - 64)) | (1 << (pyParser.T__76 - 64)) | (1 << (pyParser.T__77 - 64)) | (1 << (pyParser.T__78 - 64)) | (1 << (pyParser.T__79 - 64)) | (1 << (pyParser.T__80 - 64)) | (1 << (pyParser.T__81 - 64)) | (1 << (pyParser.T__82 - 64)) | (1 << (pyParser.T__83 - 64)) | (1 << (pyParser.T__84 - 64)) | (1 << (pyParser.T__85 - 64)) | (1 << (pyParser.T__86 - 64)) | (1 << (pyParser.T__87 - 64)) | (1 << (pyParser.T__88 - 64)) | (1 << (pyParser.Var - 64)) | (1 << (pyParser.Int - 64)) | (1 << (pyParser.Float - 64)) | (1 << (pyParser.Str - 64)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.StmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def single_stmt(self):
            return self.getTypedRuleContext(pyParser.Single_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(pyParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_stmt

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterStmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = pyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 162
            token = self._input.LA(1)
            if token in [pyParser.T__1, pyParser.T__2, pyParser.T__3, pyParser.T__5, pyParser.T__7, pyParser.T__8, pyParser.T__9, pyParser.T__10, pyParser.T__11, pyParser.T__12, pyParser.T__13, pyParser.T__15, pyParser.T__16, pyParser.T__21, pyParser.T__47, pyParser.T__49, pyParser.T__50, pyParser.T__51, pyParser.T__60, pyParser.T__63, pyParser.T__64, pyParser.T__75, pyParser.T__76, pyParser.T__77, pyParser.T__78, pyParser.T__79, pyParser.T__80, pyParser.T__81, pyParser.T__82, pyParser.T__83, pyParser.T__84, pyParser.T__85, pyParser.T__86, pyParser.T__87, pyParser.T__88, pyParser.Var, pyParser.Int, pyParser.Float, pyParser.Str]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.single_stmt()

            elif token in [pyParser.T__20, pyParser.T__23, pyParser.T__24, pyParser.T__25, pyParser.T__26, pyParser.T__30, pyParser.T__31, pyParser.T__74]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.block_stmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.Single_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(pyParser.Assign_stmtContext,0)


        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def stmts(self):
            return self.getTypedRuleContext(pyParser.StmtsContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_single_stmt

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterSingle_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitSingle_stmt(self)




    def single_stmt(self):

        localctx = pyParser.Single_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_single_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 164
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.state = 165
                self.exprlist()
                pass

            elif la_ == 3:
                self.state = 166
                self.stmts()
                pass


            self.state = 169
            self.match(pyParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.StmtsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pyParser.RULE_stmts

     
        def copyFrom(self, ctx):
            super(pyParser.StmtsContext, self).copyFrom(ctx)



    class Assert_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Assert_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterAssert_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitAssert_stmt(self)


    class Global_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Global_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def var(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.VarContext)
            else:
                return self.getTypedRuleContext(pyParser.VarContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterGlobal_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitGlobal_stmt(self)


    class Exec_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Exec_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterExec_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitExec_stmt(self)


    class Loop_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Loop_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitLoop_stmt(self)


    class Func_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Func_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterFunc_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitFunc_stmt(self)


    class Pass_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Pass_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterPass_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitPass_stmt(self)


    class Del_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Del_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def varlist(self):
            return self.getTypedRuleContext(pyParser.VarlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterDel_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitDel_stmt(self)


    class Print_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Print_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitPrint_stmt(self)


    class Import_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Import_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def import_(self):
            return self.getTypedRuleContext(pyParser.Import_Context,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitImport_stmt(self)


    class Raise_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Raise_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterRaise_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitRaise_stmt(self)



    def stmts(self):

        localctx = pyParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.state = 230
            token = self._input.LA(1)
            if token in [pyParser.T__1]:
                localctx = pyParser.Pass_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(pyParser.T__1)

            elif token in [pyParser.T__2]:
                localctx = pyParser.Del_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(pyParser.T__2)
                self.state = 173
                self.varlist()
